<resources>
    <string name="app_name">Счёт футбол</string>
    <string name="reset">Сброс</string>
    <string name="goal">Гол</string>
    <string name="match">Футбол</string>
    <string name="score_1" translatable="false">0</string>
    <string name="score_2" translatable="false">0</string>
    <string name="colon" translatable="false">:</string>
    <string name="country_1">Аргентина</string>
    <string name="country_2">Ямайка</string>
    <string name="todo" translatable="false">TODO</string>

</resources>