<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/reset"
        android:onClick="OnClickBtnResetScore"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/grey"
        android:text="@string/reset"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/goal_1"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/blue"
        android:onClick="OnClickBtnAddScore_1"
        android:text="@string/goal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_1"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/country_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_1"
        app:layout_constraintStart_toStartOf="@+id/country_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="@drawable/argentina" />

    <TextView
        android:id="@+id/country_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_1"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/goal_2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/green"
        android:onClick="OnClickBtnAddScore_2"
        android:text="@string/goal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_2"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/country_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_2"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/country_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        app:srcCompat="@drawable/jamaica" />

    <TextView
        android:id="@+id/country_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_2"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score_1"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/score_1"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_1"
        app:layout_constraintStart_toStartOf="@+id/image_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score_2"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/score_2"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_2"
        app:layout_constraintStart_toStartOf="@+id/image_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:text="@string/colon"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score_2"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/score_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>